# Marmot

./: .buildinfo  .clang-format  .fuse_hidden00020841000000ee  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .zenodo.json  ADLinearElasticRegistration_8cpp.html  ADLinearElasticRegistration_8cpp__incl.map  ADLinearElasticRegistration_8cpp__incl.md5  ADLinearElastic_8cpp.html  ADLinearElastic_8cpp__incl.map  ADLinearElastic_8cpp__incl.md5  ADLinearElastic_8h.html  ADLinearElastic_8h__dep__incl.map  ADLinearElastic_8h__dep__incl.md5  ADLinearElastic_8h__incl.map  ADLinearElastic_8h__incl.md5  ADLinearElastic_8h_source.html  ADVonMisesConstants_8h.html  ADVonMisesConstants_8h__dep__incl.map  ADVonMisesConstants_8h__dep__incl.md5  ADVonMisesConstants_8h_source.html  ADVonMisesRegistration_8cpp.html  ADVonMisesRegistration_8cpp__incl.map  ADVonMisesRegistration_8cpp__incl.md5  ADVonMises_8cpp.html  ADVonMises_8cpp__incl.map  ADVonMises_8cpp__incl.md5  ADVonMises_8h.html  ADVonMises_8h__dep__incl.map  ADVonMises_8h__dep__incl.md5  ADVonMises_8h__incl.map  ADVonMises_8h__incl.md5  ADVonMises_8h_source.html  AdaptiveSubstepper.h  AdaptiveSubstepperExplicit.h  AdaptiveSubstepperExplicit_8h.html  AdaptiveSubstepperExplicit_8h__incl.map  (+1786 more)
.doctrees/: index.doctree
_images/: graphviz-0076d2a013b6b566ae4c0c40002a9285d5f37cad.png.map  graphviz-01b3a55ec291c61afffa0f63aeeed029d4bc9fd5.png.map  graphviz-03d12e0aca262a6344ed2796aa26e9e8ea41b01d.png.map  graphviz-05f1d430e7471e349f5c92d6dba820ed23f7b956.png.map  graphviz-07641c1f0f573f6c37aff7249238ad5f1affd9f6.png.map  graphviz-0e95765bd3f0dfb10b483e1103ec90076275b280.png.map  graphviz-10b48e1f7797e293873af7dccddb28d1e31e2627.png.map  graphviz-1a20a778fe532da67169f40e9cd8760a8da6a044.png.map  graphviz-1bd19b912e407adc24de4b7dcc8306ed4f09f168.png.map  graphviz-1d51af6bd3fc0d561b52695a118e79f079c9ab07.png.map  graphviz-1d794df5a58fa55df4db8368238308662b3156e5.png.map  graphviz-1da755f555105b1bf0314e28378681f91096e0c1.png.map  graphviz-1e2554a33013ee0a5a6cb675c800ba057936733c.png.map  graphviz-1e370563bcd1fb79d551091c7e22be42ff512e36.png.map  graphviz-21e743060f8831807db9035dfa54b3e5f0a551e8.png.map  graphviz-236eb08853ce203a08e4fe280d410907d5b4bab1.png.map  graphviz-244db26a1fb6d42059d7b96ac6d120141eb24e05.png.map  graphviz-29e3626030f57e866e322fb9b979cf7dfd66a0a3.png.map  graphviz-2c1c444f50f527a27c868146d2d0e3d990e23cc7.png.map  graphviz-2ee622d17fcf4a0ac54fe57fe1e0e5a3d715bce1.png.map  graphviz-361c19f0fc4857b6f86e6ab5e8b14adeddc34152.png.map  graphviz-38beec2f855fc3a0b3442153ff6f0656fdec87b2.png.map  graphviz-3d32702f4381f7d83d951d301460d1d9a145286b.png.map  graphviz-3e3151b64ba518d7e60265826c49d18a038ed7f0.png.map  graphviz-42a7faa3f92c41363265e3416690466a2e9fd12f.png.map  graphviz-43f2c4a5cc82588a00287d578a3a55295ff7fb90.png.map  graphviz-444573c0cdaff0c84446f0ba6b373317d2e89f00.png.map  graphviz-44555bcd1ba80d245880ecfa0e8843989b5d8d13.png.map  graphviz-4695c7bfc2fcf287f5c8b46db838e42f01715579.png.map  graphviz-46b9d7a8ebba0dd97d5e0d1c5218fb5575c28877.png.map  graphviz-48b55504370be1cfc89f367f576e4f9c4504c307.png.map  graphviz-4cc2ecd32a33f5686dd9cca81baea09b3387f86d.png.map  graphviz-4efef05669b7358751411f15049b80b6ae98c426.png.map  graphviz-4f23646890f3d39d446f19dcecac996507b75b57.png.map  graphviz-52a9a22636a9127a7ebed107debb638c8cbf3e9a.png.map  graphviz-542c8701b39dedefea06a5123484c89896815029.png.map  graphviz-57d8592b6728d3ef84095358436d5d8c21bb2abc.png.map  graphviz-5bbd112cda5d46aeb45a5fc6081434aca6e2f532.png.map  graphviz-5be3e526c07e5bf7fa9e5ccbc9568e20a537f238.png.map  graphviz-62586ae2054bba40c9541eb9da5b33404f837882.png.map  (+74 more)
doc/: DOCUMENTATION.md  Doxyfile  buildDocumentation.py  conf.py  content.md  continuummechanics.md  core.md  coreTemplate.md  customStyles.css  dconfig  elements.md  elementsTemplate.md  index.rst  interfaces.md  mainpage.md  materials.md  materialsTemplate.md  modules.md  references.bib  requirements.txt
include/: AdaptiveSubstepper.h  AdaptiveSubstepperExplicit.h  DuvautLionsViscosity.h  HughesWinget.h  InnerNewtonIterationChecker.h  InnerNewtonIterationCheckerMarkII.h  LinearElastic.h  MarmotAbaqusUtility.h  MarmotConstants.h  MarmotElasticity.h  MarmotEnhancedAssumedStrain.h  MarmotFiniteElement.h  MarmotGeometryElement.h  MarmotJournal.h  MarmotKinematics.h  MarmotMaterial.h  MarmotMaterialHyperElastic.h  MarmotMaterialHypoElastic.h  MarmotMaterialHypoElasticNonLocal.h  MarmotMaterialMechanical.h  MarmotMaterialRegistrationHelper.h  MarmotMath.h  MarmotTensor.h  MarmotTypedefs.h  MarmotUtils.h  MarmotVoigt.h  MatthiasAdaptiveSubstepper.h  MatthiasAdaptiveSubstepperExplicit.h  MenetreyWillam.h  NISTParallelizableBackendElement.h  NeunerAdaptiveSubstepper.h  PerezFougetSubstepper.h  PerezFougetSubstepperExplicitMarkII.h  PerezFougetSubstepperMarkII.h  PerezFougetSubstepperTime.h  RegisteredBftMaterial.h  UelInterfaceElement.h  YieldSurfaceCombinationManager.h  bftAbaqusUmatWrapper.h  bftAbaqusUtility.h  (+36 more)
pages/: contributors.html  documentation.html  features.html  installation.html  interfaces.html  publications.html
scripts/: buildDocumentation.py  pre-commit_setup.py  projectmanager.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  (+140 more)
sphinx/: genindex.html  index.html  objects.inv  search.html
src/: ADLinearElastic.cpp  ADLinearElasticRegistration.cpp  ADVonMises.cpp  ADVonMisesRegistration.cpp  B3.cpp  B3Registration.cpp  B3Shrinkage.cpp  B4.cpp  B4Registration.cpp  B4Shrinkage.cpp  CompressibleNeoHooke.cpp  DisplacementFiniteElementRegistration.cpp  DisplacementFiniteStrainULElement.cpp  DryingCreepComplianceSpectrumApproximation.cpp  HaighWestergaard.cpp  (+88 more)
(+1121 files in other folders)
